# trane-transcription

./: .gitignore  Cargo.toml  README.md  courses_manifest_template.json
courses/adrianne_lenker/songs/dragon_eyes/: course_manifest.json
courses/adrianne_lenker/songs/dragon_eyes/passages/: dragon_eyes.json
courses/adrianne_lenker/songs/zombie_girl/: course_manifest.json
courses/adrianne_lenker/songs/zombie_girl/passages/: zombie_girl.json
courses/adrianne_lenker/songs_1/passages/: zombie_girl.json
courses/folk/adrianne_lenker/songs/: course_manifest.json
courses/songs-adrianne_lenker/songs_1/: course_manifest.json
courses/songs-adrianne_lenker/songs_1/passages/: dragon_eyes.json  zombie_girl.json
courses/songs-adrianne_lenker/zombie_girl_1/: course_manifest.json
courses/songs-adrianne_lenker/zombie_girl_1/passages/: passages.json
src/: main.rs
