[package]
name = "trane-transcription"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trane-transcription"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trane = "0.21.3"
ureq = "2"
ustr = { version = "1", features = ["serde"] }

# Commented out for use in local development.
# trane = { path = "../trane" }